--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: page
 title: Blog
-subtitle: Hitchhiker's guid to web development
+subtitle: Hitchhiker's guide to web development
 sitemap:
   priority: 0.9
 ---
