--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 ---
 layout: page
-title: BLOG
-subtitle: Adventures through space and time 
+title: Reagan Cline
+<!-- subtitle: Adventures through space and time -->
 sitemap:
   priority: 0.9
 ---
+
+<!-- hiding index of posts
 
 <div class="boxed">
 <ul class="list-posts">
@@ -18,3 +20,5 @@ sitemap:
     {% endfor %}
 </ul>
 </div>
+
+-->
