--- a/index.html
+++ b/index.html
@@ -1,10 +1,25 @@
 ---
 layout: page
-title: Reagan Cline
+title: 
 <!-- subtitle: Adventures through space and time -->
 sitemap:
   priority: 0.9
 ---
+
+<div class="img" style="max-width: 33%;">
+    <img src="/assets/succulent2.png">
+</div>
+
+<div class="body">
+    <p><a href="https://www.linkedin.com/in/reagancline/">Reagan Cline</a>  /  Product Analyst at <a href="https://www.fleetio.com">Fleetio</a>  /  Freelance Creative Consultant</p>
+    <p style="font-style:italic;">reaganecline at gmail.com</p>
+ </div>
+
+
+
+
+
+
 
 <!-- hiding index of posts
 
