Remove freelance design from landing page

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ sitemap:
 </div>
 
 <div class="body">
-    <p><a href="https://www.linkedin.com/in/reagancline/">Reagan Cline</a>  /  Product Analyst at <a href="https://www.fleetio.com">Fleetio</a>  /  Freelance Creative Consultant</p>
+    <p><a href="https://www.linkedin.com/in/reagancline/">Reagan Cline</a></p>
     <p style="font-style:italic;">reaganecline at gmail.com</p>
  </div>
 
