Update alignment on home

--- a/index.html
+++ b/index.html
@@ -11,8 +11,7 @@ sitemap:
 </div>
 
 <div class="body">
-    <p><a href="https://www.linkedin.com/in/reagancline/">Reagan Cline</a></p>
-    <p style="font-style:italic;">reaganecline at gmail.com</p>
+    <p><a href="https://www.linkedin.com/in/reagancline/">Reagan Cline</a> / <style="font-style:italic;">reaganecline at gmail.com</p>
  </div>
 
 
